<resources>
    <string name="app_name">Dory</string>
    <string name="create_event_heading">Create an Event</string>
    <string name="event_name_input">Event name</string>
    <string name="create_event_date_btn">Pick a date</string>
    <string name="event_description_input">Event Description</string>
    <string name="event_location_input">Enter location</string>
    <string name="choose_invitees_btn">Choose invitees</string>
    <string name="create_event_btn">Create</string>
    <string name="create_event_img_desc">calendarImg</string>
    <string name="organizer_appbar_title">Organizer</string>
    <string name="event_activity_appbar_heading">Event Details</string>
    <string name="search_events_input">Search Events</string>
    <string name="dynamic_heading">Hello,</string>
    <string name="open_btn">Open</string>
    <string name="delete_event_btn">Delete</string>
    <string name="card_event_name">Event Name</string>
    <string name="card_event_date">Event Date</string>
    <string name="card_event_location">Event Location</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="duration_hours_input">Duration (hours)</string>
    <string name="capacity_input">Capacity</string>
    <string name="send_btn">Send</string>
    <string name="invite_users_heading">Invite users</string>
    <string name="attendee_appbar_heading">Attendee</string>
    <string name="search_bar_hint">Search</string>
    <string name="no_invitations_found">No invitations found.</string>
    <string name="title_placeholder">title</string>
    <string name="datetime_placeholder">datetime (yyyy-mm-dd hh:mm)</string>
    <string name="location_placeholder">location</string>
    <string name="description_placeholder">description</string>
    <string name="attendees_placeholder">attendees</string>
    <string name="capacity_placeholder">capacity</string>
    <string name="update_btn">Update</string>
    <string name="profile_setting">Profile Settings</string>
</resources>