<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/CardViewStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:padding="0dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="30dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp"
        android:padding="6dp">

        <TextView
            android:id="@+id/textViewEventName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_event_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textViewEventDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.076" />

        <TextView
            android:id="@+id/textViewEventLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_event_location"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewEventDate"
            app:layout_constraintVertical_bias="0.13" />

        <TextView
            android:id="@+id/textViewEventDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_event_date"
            app:layout_constraintBottom_toTopOf="@+id/textViewEventLocation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/deleteEventBtn"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewEventName"
            app:layout_constraintVertical_bias="0.096" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/openBtn"
            style="@style/TertiaryButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="0sp"
            android:paddingBottom="0sp"
            android:text="@string/open_btn"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/deleteEventBtn"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/deleteEventBtn"
            style="@style/DestructiveButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="0sp"
            android:paddingBottom="0sp"
            android:text="@string/delete_event_btn"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
