<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/create_event_gradient"
    android:fitsSystemWindows="true"
    tools:context=".events.CreateEventActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        style="@style/AppBarStyle"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:navigationIcon="@drawable/ic_go_back_light"
            app:title="@string/create_event_heading"
            app:titleTextAppearance="@style/TextAppearance.Material3.ActionBar.Title"
            app:titleTextColor="@color/colorSurface" />
    </com.google.android.material.appbar.AppBarLayout>


    <ImageView
        android:id="@+id/create_event_img"
        android:layout_width="152dp"
        android:layout_height="124dp"
        android:contentDescription="@string/create_event_img_desc"
        android:src="@drawable/create_event_img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.113" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/event_name_text_layout"
        style="@style/TextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginHorizontal="20dp"

        android:hint="@string/event_name_input"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:errorEnabled="true"
        app:hintAnimationEnabled="true"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintVertical_bias="0.214">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/event_name_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:textColorHint="@color/colorTextSecondary" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/event_desc_text_layout"
        style="@style/TextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="165dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/event_description_input"
        app:hintAnimationEnabled="true"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/event_location_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_name_text_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/event_desc_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:inputType="text|textMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/event_location_layout"
        style="@style/TextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/event_location_input"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_desc_text_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/event_location_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPostalAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toTopOf="@+id/create_event_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_location_layout">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/event_datetime_input_layout"
            style="@style/TextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="65dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/select_invitees_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/event_datetime_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:cursorVisible="false"
                android:focusable="false"
                android:hint="@string/create_event_date_btn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/select_invitees_btn"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/select_invitees_layout"
            style="@style/TextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="65dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/event_datetime_input_layout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/select_invitees_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:cursorVisible="false"
                android:focusable="false"
                android:hint="@string/choose_invitees_btn" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_event_btn"
        style="@style/SecondaryButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/create_event_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_name_text_layout"
        app:layout_constraintVertical_bias="0.838" />

</androidx.constraintlayout.widget.ConstraintLayout>